# service-runtime

./: .bazelignore  .bazelrc  .golangci.yml  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  RETIREMENT.md  buf.gen.yaml  go.mod  go.sum  renovate.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/build-docker-image/: action.yml
.github/actions/publish-ghcr-image/: action.yml
.github/actions/setup-go-service/: action.yml
.github/workflows/: bazel-rbe.yml  ci.yml  proto-bump.yml  publish-go-service-builder.yml  release.yml
agenthook/: BUILD.bazel  config.go  config_test.go  hook.go  run.go  run_test.go
async/: BUILD.bazel  async.go  async_test.go
authmw/: BUILD.bazel  authmw.go  authmw_test.go  errors.go  principal.go
bazel/toolchains/cc/: BUILD.bazel
changejournal/: BUILD.bazel  changejournal.go  changejournal_test.go
cmd/evalops-agent-hook/: BUILD.bazel  main.go
docs/development/: bazel.md
downstream/: BUILD.bazel  downstream.go  downstream_test.go
featureflags/: BUILD.bazel  file_store.go  file_store_test.go
health/: BUILD.bazel  health.go  health_test.go
health/natscheck/: BUILD.bazel  natscheck.go  natscheck_test.go
health/redischeck/: BUILD.bazel  redischeck.go  redischeck_test.go
httpclient/: BUILD.bazel  httplb.go  httplb_test.go
httpkit/: BUILD.bazel  endpoints.go  errors.go  httpkit_test.go  middleware.go  recovery.go  request.go  response.go  response_json.go  security.go
idempotency/: BUILD.bazel  idempotency.go  idempotency_test.go
identityclient/: BUILD.bazel  client.go  client_test.go
images/go-service-builder/: Dockerfile
migrate/: BUILD.bazel  migrate.go  migrate_integration_test.go  migrate_test.go
mtls/: BUILD.bazel  mtls.go  mtls_test.go
natsbus/: BUILD.bazel  consumer.go  natsbus.go  natsbus_test.go  propagation.go  propagation_test.go  reliable.go  reliable_test.go  telemetry_test.go
observability/: BUILD.bazel  connectotel.go  dbstats.go  labels.go  labels_test.go  logging.go  metrics.go  observability_test.go  redishook.go  redisstats.go  wide_event.go
pgxpoolutil/: BUILD.bazel  open.go  open_test.go
postgres/: BUILD.bazel  open.go  open_test.go
proto/evalops/runtime/natsbus/v1/: envelope.proto
ratelimit/: BUILD.bazel  metrics.go  ratelimit.go  ratelimit_test.go  redis.go
redisutil/: BUILD.bazel  open.go  open_test.go
resilience/: BUILD.bazel  breaker.go  breaker_test.go  retry.go  retry_test.go
rterrors/: BUILD.bazel  connect.go  errors.go  errors_test.go  http.go  middleware.go
scripts/: audit-ci-adoption.sh  pre-commit  run-bazel-rbe.sh
startup/: BUILD.bazel  defaults.go  http.go  http_test.go  lifecycle.go  retry.go  retry_test.go  tracing.go  tracing_test.go
templates/helm/: migration-job.yaml
testutil/: BUILD.bazel  auth.go  context.go  http.go  nats.go  nats_test.go  postgres.go  testutil_test.go
