module(
    name = "evalops_service_runtime",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_go", version = "0.60.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.3")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc", "local_config_cc_toolchains")

register_toolchains(
    "//bazel/toolchains/cc:linux_amd64_gcc_toolchain",
    "@local_config_cc_toolchains//:all",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_connectrpc_connect", "com_connectrpc_otelconnect", "com_github_alicebob_miniredis_v2", "com_github_bufbuild_httplb", "com_github_data_dog_go_sqlmock", "com_github_evalops_proto", "com_github_go_chi_chi_v5", "com_github_golang_migrate_migrate_v4", "com_github_google_uuid", "com_github_jackc_pgx_v5", "com_github_nats_io_nats_go", "com_github_nats_io_nats_server_v2", "com_github_prometheus_client_golang", "com_github_prometheus_client_model", "com_github_redis_go_redis_v9", "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp", "io_opentelemetry_go_otel_sdk", "io_opentelemetry_go_otel_trace", "org_golang_google_protobuf")
