load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "changejournal",
    srcs = ["changejournal.go"],
    importpath = "github.com/evalops/service-runtime/changejournal",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_evalops_proto//gen/go/events/v1:events",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "changejournal_test",
    srcs = ["changejournal_test.go"],
    embed = [":changejournal"],
    deps = [
        "@com_github_data_dog_go_sqlmock//:go-sqlmock",
        "@com_github_evalops_proto//gen/go/events/v1:events",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
