load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "httpkit",
    srcs = [
        "endpoints.go",
        "errors.go",
        "middleware.go",
        "recovery.go",
        "request.go",
        "response.go",
        "response_json.go",
        "security.go",
    ],
    importpath = "github.com/evalops/service-runtime/httpkit",
    visibility = ["//visibility:public"],
    deps = [
        "//rterrors",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_google_uuid//:uuid",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_test(
    name = "httpkit_test",
    srcs = ["httpkit_test.go"],
    embed = [":httpkit"],
    deps = [
        "//rterrors",
        "//testutil",
        "@com_connectrpc_connect//:connect",
        "@com_github_go_chi_chi_v5//:chi",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
