load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "identityclient",
    srcs = ["client.go"],
    importpath = "github.com/evalops/service-runtime/identityclient",
    visibility = ["//visibility:public"],
    deps = [
        "//mtls",
        "@com_github_evalops_proto//gen/go/identity/v1:identity",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "identityclient_test",
    srcs = ["client_test.go"],
    embed = [":identityclient"],
    deps = [
        "//mtls",
        "//testutil",
        "@com_github_evalops_proto//gen/go/identity/v1:identity",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
    ],
)
