load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mtls",
    srcs = ["mtls.go"],
    importpath = "github.com/evalops/service-runtime/mtls",
    visibility = ["//visibility:public"],
    deps = ["@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp"],
)

go_test(
    name = "mtls_test",
    srcs = ["mtls_test.go"],
    embed = [":mtls"],
    deps = [
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)
