load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "natsbus",
    srcs = [
        "consumer.go",
        "natsbus.go",
        "propagation.go",
        "reliable.go",
    ],
    importpath = "github.com/evalops/service-runtime/natsbus",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/proto/go/evalops/runtime/natsbus/v1:natsbus",
        "//resilience",
        "@com_github_google_uuid//:uuid",
        "@com_github_nats_io_nats_go//:nats_go",
        "@com_github_nats_io_nats_go//jetstream",
        "@com_github_prometheus_client_golang//prometheus",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.40.0:v1_40_0",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "natsbus_test",
    srcs = [
        "natsbus_test.go",
        "propagation_test.go",
        "reliable_test.go",
        "telemetry_test.go",
    ],
    embed = [":natsbus"],
    deps = [
        "//resilience",
        "//testutil",
        "@com_github_nats_io_nats_go//:nats_go",
        "@com_github_nats_io_nats_go//jetstream",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_model//go",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.40.0:v1_40_0",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
