load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ratelimit",
    srcs = [
        "metrics.go",
        "ratelimit.go",
        "redis.go",
    ],
    importpath = "github.com/evalops/service-runtime/ratelimit",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)

go_test(
    name = "ratelimit_test",
    srcs = ["ratelimit_test.go"],
    deps = [
        ":ratelimit",
        "@com_github_alicebob_miniredis_v2//:miniredis",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_model//go",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)
